; ModuleID = '/home/carl/AnghaBench/php-src/ext/standard/extr_browscap.c_browscap_compute_regex_len.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/standard/extr_browscap.c_browscap_compute_regex_len.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*)* @browscap_compute_regex_len to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @browscap_compute_regex_len(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i64 @ZSTR_LEN(i32* %5)
  store i64 %6, i64* %4, align 8
  store i64 0, i64* %3, align 8
  br label %7

7:                                                ; preds = %22, %1
  %8 = load i64, i64* %3, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = call i64 @ZSTR_LEN(i32* %9)
  %11 = icmp ult i64 %8, %10
  br i1 %11, label %12, label %25

12:                                               ; preds = %7
  %13 = load i32*, i32** %2, align 8
  %14 = call i32* @ZSTR_VAL(i32* %13)
  %15 = load i64, i64* %3, align 8
  %16 = getelementptr inbounds i32, i32* %14, i64 %15
  %17 = load i32, i32* %16, align 4
  switch i32 %17, label %21 [
    i32 42, label %18
    i32 46, label %18
    i32 92, label %18
    i32 40, label %18
    i32 41, label %18
    i32 126, label %18
    i32 43, label %18
  ]

18:                                               ; preds = %12, %12, %12, %12, %12, %12, %12
  %19 = load i64, i64* %4, align 8
  %20 = add i64 %19, 1
  store i64 %20, i64* %4, align 8
  br label %21

21:                                               ; preds = %12, %18
  br label %22

22:                                               ; preds = %21
  %23 = load i64, i64* %3, align 8
  %24 = add i64 %23, 1
  store i64 %24, i64* %3, align 8
  br label %7

25:                                               ; preds = %7
  %26 = load i64, i64* %4, align 8
  %27 = add i64 %26, 5
  %28 = sub i64 %27, 1
  ret i64 %28
}

declare dso_local i64 @ZSTR_LEN(i32*) #1

declare dso_local i32* @ZSTR_VAL(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
